--- a/expenses-approvals-kjar/README.adoc
+++ b/expenses-approvals-kjar/README.adoc
@@ -19,10 +19,10 @@ Contains the BPMN notations to implement Expense Approvals process automations
 == Business Processes
 
 .ExpensesApprovals
-image::images./src/main/resources/com/anadoluefes/hr/expenses/ExpensesApproval-svg.svg[800,800]
+image::src/main/resources/com/anadoluefes/hr/expenses/ExpensesApproval-svg.svg[800,800]
 
 .DepartmentLimitsValidations
-image::images./src/main/resources/com/anadoluefes/DepartmentLimitsValidations-svg.svg[800,800]
+image::src/main/resources/com/anadoluefes/DepartmentLimitsValidations-svg.svg[800,800]
 
 .Notifications
-image::images./src/main/resources/com/anadoluefes/Notifications-svg.svg[800,800]
+image::src/main/resources/com/anadoluefes/Notifications-svg.svg[800,800]
