--- a/README.adoc
+++ b/README.adoc
@@ -188,7 +188,7 @@ image::images/Expenses-Architecture.png[800,800]
 
 	$ docker-compose up
 
-This executes all configurations set forth by the link:docker-compose.yaml[`docker-compose.yaml`] file.
+This executes all configurations set forth by the link:docker-compose.yaml[`docker-compose.yaml`] file. Follow xref:anchor-1[Scenarios Test].
 
 
 * Stop all components:
@@ -231,6 +231,7 @@ This executes all configurations set forth by the link:docker-compose.yaml[`dock
 ** see link:pam-client-service/README.adoc[pam-client-service] the available APIs
 ** see link:expenses-approvals-kjar/README.adoc[expenses-approvals-kjar] for the diagram of the Business process
 
+[[anchor-1]]
 ### Process an Expense Claim
 
 	SSO_ROUTE=https://$(oc get routes secure-sso-init -o jsonpath='{.spec.host}')
