adding scenarios TODO

--- a/README.adoc
+++ b/README.adoc
@@ -169,14 +169,11 @@ Use the external ROUTE URL between services
 ** *SUCCESS*
 
 
-=== Scenario 5 - Canary Testing (Use KNATIVE `cluster-local` Services URL and always 1 POD available)
+=== [TODO] Scenario 5 - Canary Testing (2 Businesss Process Implementations in v1 and v2)
 
 * Description
 
-Configure KNative backend services to be maintain `minScale: "1"`  by adding the following to `hr-expenses-business-application-service` and `hr-expenses-validations-service`
-
-      annotations:
-        autoscaling.knative.dev/minScale: "1"    
+TBD
 
 * Reset
 
@@ -199,7 +196,66 @@ Configure KNative backend services to be maintain `minScale: "1"`  by adding the
 	./start-process.sh $TOKEN $PAM_CLIENT_SERVICE_ROUTE_URL
 	
 * RESULT
-** *SUCCESS*
+** *TBD*
+
+=== [TODO] Scenario 6 - Traffic Management Testing  (2 Businesss Process Implementations in v1 and v2 getting different % of traffic)
+
+* Description
+
+TBD
+
+* Reset
+
+	./delete-ksvc.sh 	
+		
+* Deploy KNative Service for `pam-client-service`
+
+	oc create -f scenarios/5-CanaryTesting/pam-client-service-knative.yaml
+
+* Deploy KNative Service for `hr-expenses-business-application-service`
+
+	oc create -f scenarios/5-CanaryTesting/hr-expenses-business-application-service-knative.yaml
+	
+* Deploy KNative Service for `hr-expenses-validations-service`
+	
+	oc create -f scenarios/5-CanaryTesting/hr-expenses-validations-service-knative.yaml	
+		
+==== Test KNATIVE apps	
+	
+	./start-process.sh $TOKEN $PAM_CLIENT_SERVICE_ROUTE_URL
+	
+* RESULT
+** *TBD*
+
+
+=== [TODO] Scenario 7 - Auto-Scaling  (Scale based on requests)
+
+* Description
+
+TBD
+
+* Reset
+
+	./delete-ksvc.sh 	
+		
+* Deploy KNative Service for `pam-client-service`
+
+	oc create -f scenarios/5-CanaryTesting/pam-client-service-knative.yaml
+
+* Deploy KNative Service for `hr-expenses-business-application-service`
+
+	oc create -f scenarios/5-CanaryTesting/hr-expenses-business-application-service-knative.yaml
+	
+* Deploy KNative Service for `hr-expenses-validations-service`
+	
+	oc create -f scenarios/5-CanaryTesting/hr-expenses-validations-service-knative.yaml	
+		
+==== Test KNATIVE apps	
+	
+	./start-process.sh $TOKEN $PAM_CLIENT_SERVICE_ROUTE_URL
+	
+* RESULT
+** *TBD*
 
 
 == Troubleshooting
@@ -265,4 +321,4 @@ Configure KNative backend services to be maintain `minScale: "1"`  by adding the
 
 
 
-== Test KNATIVE Service Performance	
+== [TODO] Test KNATIVE Service Performance	
